# wingpanel-indicator-onething

./: .gitignore  AUTHORS  README.md  io.github.ellie-commons.wingpanel-indicator-onething_1.1.0_amd64.deb  io.github.ellie-commons.wingpanel-indicator-onething_1.2.0_amd64.deb  meson.build  wingpanel-indicator-onething_1.3.0_amd64.deb
DEBIAN/: changelog  control
data/: gschema.xml  meson.build
debian/: changelog  control  copyright  io.github.ellie-commons.wingpanel-indicator-onething.substvars
debian/io.github.ellie-commons.wingpanel-indicator-onething/usr/share/glib-2.0/schemas/: onething.gschema.xml
po/: LINGUAS  POTFILES  da.po  de.po  es.po  fr.po  it.po  nl.po  onething-indicator.pot  pt.po  simplethings-indicator.pot  zh.po
src/: Indicator.vala
